--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,6 +13,7 @@
               </a>
               <ul class="dropdown-menu vybrat-predmet">
                 <li><a class="dropdown-item" href="/admin/admin">Admin</a></li>
+                <li><a class="dropdown-item" href="/admin/stats">Statistiky</a></li>
                 <li><a class="dropdown-item" href="/admin/users">Uživatelé</a></li>
                 <li><a class="dropdown-item" href="/invoices/open">Fakturace</a></li>
                 <li><a class="dropdown-item" href="/admin/ratings?order=cards">Hodnocení</a></li>
