--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 mb-1">
-            <h5>Statistiky</h5>
+            <h5>Administrace</h5>
         </div>
     </div>
     <div class="row text-smaller">
