--- a/views/cards/savedCards.ejs
+++ b/views/cards/savedCards.ejs
@@ -72,7 +72,7 @@
                                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavSave">
                                         <span class="navbar-toggler-icon"></span>
                                     </button>
-                                    <div class="collapse navbar-collapse" id="navbarNavSave">
+                                    <div class="collapse navbar-collapse" id="navbarNavSave" style="overflow: scroll;">
                                         <ul class="navbar-nav">
                                             <% for(let cat of categories){ %>
                                                 <li class="nav-item nav-item-saved-cards">
