minor stats edits

--- a/views/admin/stats.ejs
+++ b/views/admin/stats.ejs
@@ -47,7 +47,7 @@
                 <div class="row">
                     <div class="col-12 mb-1">
                         <h5>Statistiky</h5>
-                        <span class="text-smaller">(<a href="/admin/stats?show=year">365 dní</a> | <a href="/admin/stats?show=month">30 dní</a>)</span>
+                        <span class="text-smaller">(<a href="/admin/stats?show=month">31 dní</a> | <a href="/admin/stats?show=quarter">90 dní</a> | <a href="/admin/stats?show=year">180 dní</a> | <a href="/admin/stats?show=year">365 dní</a>)</span>
                     </div>
                 </div>
                 <div class="row" id="dataRow" fullData="<%= data %>">
