--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -45,9 +45,9 @@
                    <% }); %>
                   </ul>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                   <a class="nav-link" href="/about">O projektu</a>
-                </li>
+                </li>-->
                 <li class="nav-item">
                   <a class="nav-link" href="/clash/soubojfakult">Souboj fakult <span class="badge rounded-pill bg-danger">New</span></a>
                 </li>
