--- a/views/cards/show20.ejs
+++ b/views/cards/show20.ejs
@@ -65,7 +65,7 @@
 
         <!--PROGRESS STATUS MOBILE-->
         <div class="col-lg-2 mb-3 zobrazovat-jen-na-mobilu">
-          <div class="card d-flex flex-row justify-content-center align-items-center">
+          <div class="card d-flex flex-row justify-content-center align-items-center border-grey">
             <div class="card-body text-center">
               <p class="text-muted text-smaller mb-1">Kartička <span id="progressCardNumMobile"><span id="progressNumMobile">0</span> z <%= section.cards.length %>
               </p>
@@ -99,7 +99,7 @@
 
         <!--PROGRESS STATUS PC-->
         <div class="col-lg-2 mb-3 mt-5 mt-lg-0 nezobrazovat-na-mobilu">
-          <div class="card">
+          <div class="card border-grey">
             <div class="card-body text-center">
               <div class="card-body category-box d-flex flex-column align-items-center justify-content-center pt-1">
                 <div class="rounded-circle icon-background-medium d-flex justify-content-center align-items-center">
