--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -62,7 +62,7 @@
 
         <!--PROGRESS STATUS MOBILE-->
         <div class="col-lg-2 mb-3 zobrazovat-jen-na-mobilu">
-          <div class="card d-flex flex-row justify-content-center align-items-center">
+          <div class="card d-flex flex-row justify-content-center align-items-center border-grey">
             <div class="card-body text-center">
               <p class="text-muted text-smaller mb-1">Otázka <span id="progressCardNumMobile"><span id="progressNumMobile">0</span> z <span class="questions-length-span"><%= section.questions.length %></span>
               </p>
@@ -78,7 +78,7 @@
 
         <!--QUESTION-->
         <div class="col-lg-6 offset-lg-2 mb-3">
-            <div class="question-card-wrapper">
+            <div class="question-card-wrapper border-grey">
                 <div class="question-card text-gradient" id="question-card">
                     <div id="question-content" class="d-flex justify-content-center align-items-center" style="height: 100%">
                         <div class="card-text m-4 text-center"><div class='spinner-border' role='status'><span class='visually-hidden'>Loading...</span></div></div>
@@ -89,7 +89,7 @@
 
         <!--PROGRESS STATUS PC-->
         <div class="col-lg-2 mb-3 mt-5 mt-lg-0 nezobrazovat-na-mobilu">
-          <div class="card">
+          <div class="card border-grey">
             <div class="card-body text-center" style="padding: 0.5rem">
               <div class="card-body category-box d-flex flex-column align-items-center justify-content-center pt-1">
                 <div class="rounded-circle icon-background-medium d-flex justify-content-center align-items-center">
@@ -105,7 +105,7 @@
               </div>
             </div>
           </div>
-          <div class="card mt-3">
+          <div class="card border-grey mt-3">
             <div class="card-body" id="questions-list" style="padding: 0.5rem;padding-left:1rem;overflow: scroll;">
                 <div class="card-text m-4 text-center"><div class='spinner-border' role='status'><span class='visually-hidden'>Loading...</span></div></div>
             </div>
@@ -133,7 +133,7 @@
 
       <div class="row zobrazovat-jen-na-mobilu">
         <div class="col-12">
-            <div class="card mt-3">
+            <div class="card mt-3 border-grey">
                 <div class="card-body" id="questions-list-mobile">
                     <div class="card-text m-4 text-center"><div class='spinner-border' role='status'><span class='visually-hidden'>Loading...</span></div></div>
                 </div>
