--- a/views/legal/vop.ejs
+++ b/views/legal/vop.ejs
@@ -162,7 +162,7 @@
                     <p>4.5</p>
                 </div>
                 <div class="col-11">
-                    <p>Výše předplatného ke dni účinnosti těchto obchodních podmínek činí 199 Kč měsíčně, 890 Kč za půl roku nebo 1 490 Kč ročně.</p>
+                    <p>Výše předplatného ke dni účinnosti těchto obchodních podmínek činí 199 Kč měsíčně, 890 Kč za půl roku nebo 1 490 Kč ročně. V případě aktivace předplatného prostřednictvím mobilní aplikace (Apple Pay / Google Play Store) činí výše měsíčního předplatného 249 Kč.</p>
                 </div>
             </div>
 
@@ -530,7 +530,7 @@
             </div>
 
             <div class="row">
-                <p>Tyto obchodní podmínky nabývají účinnosti dnem 1. listopadu 2023.</p>
+                <p>Tyto obchodní podmínky nabývají účinnosti dnem 1. prosince 2024.</p>
             </div>
 
             
