--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -141,7 +141,7 @@
                                 <span class="price">199 Kč</span> / <span class="period">měsíčně</span>
                             </div>
                         </div> 
-                        <p class="text-center monthly-equivalent">(199 Kč za měsíc<sup>*</sup>)</p>
+                        <p class="text-center monthly-equivalent">(199 Kč za měsíc)</p>
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
                             <% if (!currentUser) { %>
                                 <a href="/auth/user/new?premium=true" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
