--- a/views/questions/finished.ejs
+++ b/views/questions/finished.ejs
@@ -44,7 +44,7 @@
                             <i class="far fa-check-circle fa-2x mx-2"></i>
                             <div>
                                 <p><%= counters.correct %> správně</p>
-                                <p class="text-small text-muted">(<%= Math.round(counters.correct * step) %> %)</p>
+                                <p class="text-small" style="color: white">(<%= Math.round(counters.correct * step) %> %)</p>
                             </div>
                         </div>
                     </div>
