--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -49,11 +49,11 @@
                   <a class="nav-link" href="/about">O projektu</a>
                 </li>-->
                 <li class="nav-item">
-                  <a class="nav-link" href="/clash/soubojfakult">Souboj fakult <span class="badge rounded-pill bg-danger">New</span></a>
+                  <a class="nav-link" href="/clash/soubojfakult">Souboj fakult <!--<span class="badge rounded-pill bg-danger">New</span>--></a>
                 </li>
                 <% if (currentUser) { %>
                   <li class="nav-item">
-                    <a class="nav-link" href="/leaderboard">Žebříček <span class="badge rounded-pill bg-danger">New</span></a>
+                    <a class="nav-link" href="/leaderboard">Žebříček <!--<span class="badge rounded-pill bg-danger">New</span>--></a>
                   </li>
                 <% } %>
                 <% if (!currentUser) { %>
