testResults complete logic

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -132,7 +132,7 @@ body {
 }
 
 .section-finished-badge .fa-check-circle {
-    color: #9ae80f;
+    color: #7ac705;
 }
 
 .section-unfinished-badge .fa-spinner {
