--- a/public/css/bootstrap_customised.css
+++ b/public/css/bootstrap_customised.css
@@ -58,6 +58,18 @@
     background-color: #E80F88!important;
 }
 
+.bg-red {
+    background-color: red;
+}
+
+.bg-light-grey {
+    background-color: #b0b0b0;
+}
+
+.bg-light-green {
+    background-color: #7ac705;
+}
+
 .btn-success {
     background-color: #7ac705;
     border-color: #7ac705;
