chat for EN vocabulary

--- a/views/questions/list.ejs
+++ b/views/questions/list.ejs
@@ -5,6 +5,7 @@
             <a href="/category/<%= section.category %>" class="btn btn-sm btn-outline-danger">Zpět na předmět</a>
             <div>
                 <a href="/category/<%= categoryId %>/section/<%= section._id %>/question/generate" class="btn btn-sm btn-outline-danger" style='min-width:124px' id="generate-ai">Vygenerovat (AI)</a>
+                <a href="/category/<%= categoryId %>/section/<%= section._id %>/question/generateEN" class="btn btn-sm btn-outline-danger" style='min-width:124px' id="generate-ai">Vygenerovat (AI) EN</a>
                 <a href="/category/<%= categoryId %>/section/<%= section._id %>/question/new" class="btn btn-sm btn-danger">Přidat otázku</a>
             </div>
             
