--- a/views/category.ejs
+++ b/views/category.ejs
@@ -360,3 +360,43 @@
         </div>
     <% }) %>
 <% } %>
+
+<% if(currentUser && !currentUser.appAnnouncementModalShown){ %>
+    <!-- MODAL - App Anouncement with script -->
+    <div class="modal fade" id="appAnouncementModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered edit-modal">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="d-flex justify-content-between w-100">
+                    <div></div>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <h3 class="text-center mt-3">Mobilní aplikace InLege je tady!</h3>
+                <p class="text-center">Stáhni si aplikaci InLege a uč se kdekoli a kdykoli!</p>
+                <div class="d-flex justify-content-center mt-4">
+                    <a href="https://apps.apple.com/us/app/inlege/id6670204630" target="_blank" class="btn btn-danger mx-2">App Store</a>
+                    <a href="https://play.google.com/store/apps/details?id=cz.inlege.InLege&hl=en" target="_blank" class="btn btn-danger mx-2">Google Play</a>
+                </div>
+                <div>
+                    <img src="/img/inlege_app_mock.png" alt="InLege App" class="img-fluid">
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var appAnouncementModal = new bootstrap.Modal(document.getElementById("appAnouncementModal"));
+            appAnouncementModal.show();
+        });
+        //send post request to /admin/appAnnounced to set appAnnouncementModalShown to true to prevent showing the modal again
+        fetch("/api/appAnnounced", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({}),
+        });
+    </script>
+<% } %>
