--- a/public/css/card.css
+++ b/public/css/card.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Nunito', sans-serif;
 }
 
+.color-primary {
+  color: #E80F88;
+}
+
 /* NEW CARD DESIGN*/
 .flip-card {
     width: 100%;
@@ -266,6 +270,12 @@ body {
   
     .demo-finished-main {
       font-size: 1.25rem;
+    }
+  }
+
+  @media only screen and (max-width: 1200px) {
+    .hide-under-1200 {
+      display: none;
     }
   }
 
