--- a/views/index.ejs
+++ b/views/index.ejs
@@ -189,6 +189,23 @@
                 </div>
             <div class="row" id="categories-row">
                 <div class="offset-lg-2 col-lg-8">
+                    <% if(!currentUser || (currentUser && !currentUser.usedMobileApp)) {%>
+                    <div class="row">
+                        <div class="col-12 mb-4">
+                            <div class="card border-grey">
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-evenly align-items-center">
+                                        <h5 class="text-center mb-0">Právě jsme spustili také <b>mobilní aplikaci</b> <b class="color-primary">InLege</b>!</h5>
+                                        <div class="d-flex justify-content-evenly align-items-center">
+                                          <a href="https://apps.apple.com/us/app/inlege/id6670204630" target="_blank" class="btn btn-outline-danger mx-2"><i class="fab fa-apple"></i> <span class="hide-under-1200">iOS</span></a>
+                                          <a href="https://play.google.com/store/apps/details?id=cz.inlege.InLege" target="_blank" class="btn btn-outline-danger mx-2"><i class="fab fa-android"></i> <span class="hide-under-1200">Android</span></a>
+                                        </div>
+                                      </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <% } %>
                     <div class="row">
                         <% categories.forEach(cat => { %>
                         <% if (cat.orderNum > -1) { %>
